density estimation and spectral estimation stubs

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -5,6 +5,14 @@
 % Communications references
 %============================================================================
 
+@book{abdaheer2009,
+  author       = {M. S. Abdaheer},
+  title        = {Digital Signal Processing},
+  publisher    = {University Science Press},
+  year         = {2009},
+  address      = {New Delhi},
+  }
+
 @inproceedings{adelson1981,
   author       = {Edward H. Adelson and Peter J. Burt},
   title        = {Image Data Compression with the Laplacian Pyramid},
@@ -142,6 +150,19 @@
   address      = {New York},
   language     = {english},
   url          = {http://frontweb.vuse.vanderbilt.edu/vuse_web/directory/facultybio.asp?FacultyID=9},
+  }
+
+@book{chitode2009dsp,
+  isbn         = {9788184316469},
+  isbn10       = {8184316461},
+  title        = {Digital Signal Processing},
+  author       = {J.S.Chitode},
+  publisher    = {Technical Publications},
+  year         = {2009},
+  pages        = {592},
+  url          = {http://books.google.com/books?vid=ISBN9788184316469},
+  urlw         = {http://www.worldcat.org/isbn/9788184316469},
+  urla         = {http://www.amazon.com/dp/9788184316469},
   }
 
 @book{chow1978,
@@ -357,8 +378,8 @@
   }
 
 @book{proakis1996,
-  isbn10       = {0133737624},
   isbn         = {9780133737622},
+  isbn10       = {0133737624},
   title        = {Digital Signal Processing: Principles, Algorithms, and Applications},
   series       = {Prentice Hall international editions},
   author       = {John G. Proakis and Dimitris G. Manolakis},
@@ -369,6 +390,19 @@
   url          = {http://books.google.com/books?vid=ISBN0133737624},
   urlw         = {http://www.worldcat.org/isbn/0133737624},
   urla         = {http://www.amazon.com/dp/0133737624},
+  }
+
+@book{proakis2002,
+  isbn         = {9780130622198},
+  isbn10       = {0130622192},
+  title        = {Algorithms for Statistical Signal Processing},
+  editor       = {John G. Proakis},
+  publisher    = {Prentice Hall},
+  year         = {2002},
+  pages        = {564},
+  url          = {http://books.google.com/books?vid=ISBN9780130622198},
+  urlw         = {http://www.worldcat.org/isbn/9780130622198},
+  urla         = {http://www.amazon.com/dp/9780130622198},
   }
 
 @book{meyr,
@@ -473,6 +507,19 @@
   doi          = {10.1190/1.1439788},
   url          = {http://dx.doi.org/10.1190/1.1439788},
   } 
+
+@book{salivahanan2001,
+  isbn         = {9780074639962},
+  isbn10       = {007463996X},
+  title        = {Digital Signal Processing},
+  author       = {S. Salivahanan and A. Vallavaraj},
+  publisher    = {Tata McGraw-Hill Education},
+  year         = {2001},
+  pages        = {808},
+  url          = {http://books.google.com/books?vid=ISBN9780074639962},
+  urlw         = {http://www.worldcat.org/isbn/9780074639962},
+  urla         = {http://www.amazon.com/dp/9780074639962},
+  }
 
 @book{smithIII,
   author       = {Julius O. Smith III},
@@ -708,6 +755,19 @@
   year         = {2001},
   isbn         = {0-07-232111-3},
   url          = {http://www.mhhe.com/},
+  }
+
+@book{rao2018,
+  isbn         = {9789811080814},
+  isbn10       = {981108081X},
+  title        = {Digital Signal Processing: Theory and Practice},
+  author       = {K. Deergha Rao and M. N. S. Swamy},
+  publisher    = {Springer},
+  year         = {2018},
+  pages        = {789},
+  url          = {http://books.google.com/books?vid=ISBN9789811080814},
+  urlw         = {http://www.worldcat.org/isbn/9789811080814},
+  urla         = {http://www.amazon.com/dp/9789811080814},
   }
 
 @book{ziemer,
