--- a/common/bib/mathhist.bib
+++ b/common/bib/mathhist.bib
@@ -22,6 +22,21 @@
   language     = {English},
   }
 
+@book{bell1986,
+  isbn         = {9780671628185},
+  isbn10       = {0671628186},
+  author       = {Eric Temple Bell},
+  year         = {1986},
+  title        = {Men of Mathematics},
+  publisher    = {Simon \& Schuster},
+  address      = {New York},
+  pages        = {608},
+  oclc         = {13559123},
+  url          = {http://books.google.com/books?vid=ISBN0671628186},
+  urlw         = {http://www.worldcat.org/isbn/0671628186},
+  urla         = {http://www.amazon.com/dp/0671628186},
+  }
+
 @book{bottazzini,
   author       = {Umberto Bottazzini},
   translator   = {Warren Van Egmond},
@@ -65,6 +80,8 @@
   }
 
 @book{boyer2011,
+  isbn         = {9780470525487},
+  isbn10       = {0470525487},
   author       = {Carl Benjamin Boyer and Uta C. Merzbach},
   title        = {A History of Mathematics},
   edition      = {3},
@@ -75,8 +92,6 @@
   pages        = {688},
   url          = {http://books.google.com/books?vid=ISBN0470525487},
   urla         = {http://www.amazon.com/dp/0470525487},
-  isbn         = {0470525487},
-  isbn13       = {978-0470525487},
   }
 
 @book{bjb,
