--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -899,10 +899,10 @@
   isbn10       = {0412246201},
   title        = {Density Estimation for Statistics and Data Analysis},
   volume       = {26},
-  series       = {Chapman \& Hall/CRC Monographs on Statistics \& Applied Probability},
+  series       = {Monographs on Statistics \& Applied Probability},
   author       = {Bernard. W. Silverman},
   edition      = {illustrated, reprint},
-  publisher    = {CRC Press},
+  publisher    = {Chapman \& Hall/CRC},
   year         = {1986},
   pages        = {176},
   url          = {http://books.google.com/books?vid=ISBN9780412246203},
