--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -123,8 +123,10 @@ But\ldots
   \item Said quantitatively: ``What sequence $\seqn{\lambda_n}$ yields the smallest $\mse(\meanest)$?"
 \end{enume}
 For example, would fashioning $\seqn{\lambda_n}$ to be a scaled version of a standard 
-window function, like the \fncte{Hanning window} illustrated below,
-yield the best $\mse(\meanest)$?
+window function, like the \fncte{Hanning window}\footnote{
+  \citerp{abdaheer2009}{130}
+  }
+illustrated below, yield the best $\mse(\meanest)$?
 \\\indentx\includegraphics{graphics/hanninglp50.pdf}
 \\
 \prefpp{prop:lambda_sq} answers question (2) stating
