correlation estimation stub

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -365,6 +365,15 @@
   note         = {see Weickert 1999 for historical information},
   }
 
+@unpublished{kao,
+  author       = {Ming-Seng Kao}, 
+  address      = {National Chiao-Tung University},
+  title        = {Digital Communications Lecture Notes},
+  year         = {2005},
+  month        = {September 2004 -- January 2005},
+  url          = {http://cmbsd.cm.nctu.edu.tw/~icm5201/digicom/},
+  }
+
 @book{koopmans1995,
   isbn10       = {0124192513},
   isbn         = {9780124192515},
@@ -430,6 +439,15 @@
   url          = {http://www.iss.rwth-aachen.de/1_institut/dok/meyr.html},
   }
 
+@book{mik,
+  author       = {Dimitris G. Manolakis and Vinay K. Ingle and Stephen M. Kogon},
+  title        = {Statistical and Adaptive Signal Processing},
+  publisher    = {Mc-Graw Hill},
+  address      = {Boston},
+  year         = {2000},
+  isbn         = {0-07-040051-2},
+  }
+
 @article{mintzer1985,
   author       = {Fred Mintzer},
   title        = {Filters for Distortion-free Two-band Multi-rate Filter Banks},
@@ -477,6 +495,20 @@
   isbn10       = {0-13-754920-2},
   url          = {http://www.amazon.com/dp/0137549202},
   urlg         = {https://books.google.com/books?vid=ISBN0137549202},
+  }
+
+@book{papoulis1980,
+  isbn10       = {0030560977},
+  isbn         = {9780030560972},
+  title        = {Circuits and Systems: A Modern Approach},
+  series       = {HRW series in electrical and computer engineering},
+  author       = {Athanasios Papoulis},
+  publisher    = {Holt, Rinehart, and Winston},
+  year         = {1980},
+  pages        = {435},
+  url          = {http://books.google.com/books?vid=ISBN0030560977},
+  urla         = {http://www.amazon.com/dp/0030560977},
+  language     = {English},
   }
 
 @book{prabhu2013,
@@ -627,30 +659,6 @@
   url          = {http://engr.smu.edu/ee/mds/},
   }
 
-
-@book{mik,
-  author       = {Dimitris G. Manolakis and Vinay K. Ingle and Stephen M. Kogon},
-  title        = {Statistical and Adaptive Signal Processing},
-  publisher    = {Mc-Graw Hill},
-  address      = {Boston},
-  year         = {2000},
-  isbn         = {0-07-040051-2},
-  }
-
-@book{papoulis1980,
-  isbn10       = {0030560977},
-  isbn         = {9780030560972},
-  title        = {Circuits and Systems: A Modern Approach},
-  series       = {HRW series in electrical and computer engineering},
-  author       = {Athanasios Papoulis},
-  publisher    = {Holt, Rinehart, and Winston},
-  year         = {1980},
-  pages        = {435},
-  url          = {http://books.google.com/books?vid=ISBN0030560977},
-  urla         = {http://www.amazon.com/dp/0030560977},
-  language     = {English},
-  }
-
 @article{szabo2004,
   author       = {Tam/'as Szab/'o and G/'abor Horv/'ath},
   title        = {An Efficient Hardware Implementation of Feed-Forward Neural Networks},
@@ -691,26 +699,16 @@
   urla         = {http://www.amazon.com/dp/0136057187},
   }
 
-@book{vantrees1,
-  isbn         = {0471095176},
-  author       = {Harry L. Van Trees},
-  title        = {Detection, Estimation, and Modulation Theory, Part I },
-  publisher    = {Wiley-Interscience},
-  edition      = {Reprint edition},
-  year         = {2001},
-  month        = {September 27},
-  url          = {http://ece.gmu.edu/faculty\_info/van.html},
-  }
-
-@book{vantrees4,
-  author       = {Harry L. Van Trees},
-  title        = {Otimum Array Processing; Part IV of Detection, Estimation, and Modulation Theory},
-  shorttitle   = {Otimum Array Processing},
-  publisher    = {Wiley-Interscience},
-  address      = {New York},
-  year         = {2002},
-  isbn         = {0-471-09390-4},
-  url          = {http://ece.gmu.edu/faculty\_info/van.html},
+@book{vaseghi2000,
+  isbn         = {0471626929},
+  author       = {Saeed V. Vaseghi},
+  title        = {Advanced Digital Signal Processing and Noise Reduction},
+  edition      = {2},
+  year         = {2000},
+  publisher    = {John Wiley \& Sons},
+  url          = {http://books.google.com/books?vid=ISBN0471626929},
+  urlw         = {http://www.worldcat.org/isbn/0471626929},
+  urla         = {http://www.amazon.com/dp/0471626929},
   }
 
 @article{weickert1999,
@@ -801,15 +799,6 @@
   year         = {2001},
   month        = {February -- June},
   url          = {http://shannon.cm.nctu.edu.tw/dc.htm},
-  }
-
-@unpublished{kao,
-  author       = {Ming-Seng Kao}, 
-  address      = {National Chiao-Tung University},
-  title        = {Digital Communications Lecture Notes},
-  year         = {2005},
-  month        = {September 2004 -- January 2005},
-  url          = {http://cmbsd.cm.nctu.edu.tw/~icm5201/digicom/},
   }
 
 
