--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -186,7 +186,7 @@ Let $\ff(x)$ be a \structe{differentiable function} in $\clFrr$.
 \begin{theorem}
 \footnote{
   \citerppgc{papoulis1984}{95}{96}{0070484686}{``Fundamental Theorem"},
-  \citerpgc{papoulis1990}{157}{0137116985}{``Fundamental Theorem"}
+  \citerpgc{papoulis1990}{157}{0137116985}{``Fundamental Theorem"},
   \citerp{papoulis}{93},
   \citerpgc{haykin1994}{235}{239}{0471571768}{\textsection ``{\scshape 4.5 Transformations of Random Variables}"},
   \citerp{proakis}{30},
