symbolic sequence processing edits

--- a/abcssp/ssp/sspdft.tex
+++ b/abcssp/ssp/sspdft.tex
@@ -333,7 +333,7 @@
 %---------------------------------------
 \begin{enumerate}
   \item \label{item:dftebola_psp}
-     Consider the Ebola DNA sequence described in \prefpp{ex:dna_ebola}.
+     Consider the Ebola DNA sequence described in \prefpp{ex:dna_ebola}.\footnote{\citeD{ncbiEbola}}
      DNA sequences commonly exhibit a strong DFT harmonic component at $\sfrac{2\pi}{3}$ 
      radians.\footnote{\citePp{galleani2010}{771}}
   
