--- a/abcssp/ssp/sspwave.tex
+++ b/abcssp/ssp/sspwave.tex
@@ -226,7 +226,7 @@ but yet is not truly wavelet analysis in the strict sense:
 %---------------------------------------
 \begin{enumerate}
   \item \label{item:dnapl_psp}
-     Consider the Phage Lambda DNA sequence.
+     Consider the Phage Lambda DNA sequence.\footnote{\citeD{ncbiPhageLambda}}
      It has a strong $\dnaC\dnaG$ bias before $n=20000$ and 
             a strong $\dnaA\dnaT$ bias after,\footnote{\citerpg{cristianini2007}{14}{1139460153}}
      as demonstrated next by mapping 
