--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2674,6 +2674,16 @@
   url          = {https://doi.org/10.7287/peerj.preprints.2467v1},
   }
 
+@misc{greenhoe2015larc_cpp,
+  author       = {Daniel J. Greenhoe},
+  title        = {C++ source code support for ``An extension to the spherical metric using polar linear interpolation"},
+  year         = {2016},
+  url          = {https://github.com/dgreenhoe/Lagrange-arc-distance},
+  url          = {Alternate URL: \url{https://www.researchgate.net/publication/304777186}},
+  }
+
+
+
 @article{greenhoe2015pds,
   author       = {Daniel J. Greenhoe},
   title        = {Properties of distance spaces with power triangle inequalities},
