--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -271,20 +271,22 @@
 
 @book{greenhoe2016abcssp,
   author       = {Daniel J. Greenhoe},
-  title        = {A book concerning symbolic sequence processing},
+  title        = {A Book Concerning Symbolic Sequence Processing},
   year         = {2016},
   month        = {July},
   edition      = {version 0.50},
   url          = {https://www.researchgate.net/publication/304777186},
+  note         = {Alternate URL: \url{https://github.com/dgreenhoe/pdfs/blob/master/abcssp.pdf}},
   }
 
 @misc{greenhoe2016abcsspc,
   author       = {Daniel J. Greenhoe},
-  title        = {C++ source code support for ``A book concerning symbolic sequence processing"},
+  title        = {C++ source code support for ``A Book Concerning Symbolic Sequence Processing"},
   year         = {2016},
   month        = {July},
   edition      = {version 0.50},
-  url          = {https://www.researchgate.net/publication/304777186},
+  url          = {https://github.com/dgreenhoe/symbolic-sequence-processing},
+  url          = {Alternate URL: \url{https://www.researchgate.net/publication/304777186}},
   }
 
 @unpublished{guichard2012,
