--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -268,6 +268,7 @@
 \newcommand{\citeIbullet}{{\scriptsize\notebook}}% bullet for incollection references (e.g. a paper in a book)
 \newcommand{\citeWbullet}{{\scriptsize\computer}}% bullet for web resource
 \newcommand{\citeFbullet}{{\scriptsize\floppydisk}}% bullet for data file
+\newcommand{\citeSbullet}{{\scriptsize\floppydisk}}% bullet for source code support
 \newcommand{\crossrefbullet}{{\scriptsize\booko}}% bullet for cross references
 \newcommand{\lcomdelim}{$\langle$} % left  comment delimeter
 \newcommand{\rcomdelim}{$\rangle$} % right comment delimeter
@@ -292,6 +293,18 @@
 %\newcommand{\citeOc}  [3]{\citeWbullet\;\cite{#1} \lcomdelim#2\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeO}  [2]{{\scs\citeWbullet}\;\cite{#1}\;\url{http://oeis.org/#2}} % OEIS citation
 \newcommand{\citeOc} [3]{{\scs\citeWbullet}\;\cite{#1}\;\url{http://oeis.org/#2}\;\lcomdelim{#3}\rcomdelim} % OEIS citation
+
+%---------------------------------------
+% Data citations
+%---------------------------------------
+\newcommand{\citeD}  [1]{{\scs\citeFbullet}\;\cite{#1}}
+\newcommand{\citeDc} [2]{{\scs\citeFbullet}\;\cite{#1} \lcomdelim{#2}\rcomdelim}
+
+%---------------------------------------
+% Source code citations
+%---------------------------------------
+\newcommand{\citeS}  [1]{{\scs\citeSbullet}\;\cite{#1}}
+\newcommand{\citeSc} [2]{{\scs\citeSbullet}\;\cite{#1} \lcomdelim{#2}\rcomdelim}
 
 % paper citations
 %---------------------------------------
