moment estimation references. Bessel's correction

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -66,6 +66,15 @@
   urla         = {http://www.amazon.com/dp/1461250560},
   }
 
+@book{bajpai1967,
+  title        = {Foundations of statistics},
+  author       = {Om Prakash Bajpai},
+  publisher    = {Asia Publishing House},
+  year         = {1967},
+  pages        = {572},
+  url          = {https://books.google.com/books?id=QrPuAAAAMAAJ},
+  }
+
 @book{bendat1966,
   author       = {Julius S. Bendat and Allan G. Piersol},
   title        = {Measurement and Analysis of Random Data},
@@ -172,6 +181,19 @@
   pages        = {23--36},
   }
 
+@book{bolstad2007,
+  isbn         = {9780470141151},
+  isbn10       = {0470141158},
+  title        = {Introduction to Bayesian Statistics},
+  author       = {William M. Bolstad},
+  edition      = {2},
+  publisher    = {Wiley},
+  year         = {2007},
+  pages        = {437},
+  url          = {http://books.google.com/books?vid=ISBN9780470141151},
+  urla         = {http://www.amazon.com/dp/9780470141151},
+  }
+
 @book{caines1988,
   isbn10       = {0471081019},
   isbn         = {9780471081012},
@@ -226,6 +248,18 @@
   doi          = {10.1109/TGRS.2012.2192937},
   publisher    = {IEEE},
   url          = {https://www.researchgate.net/profile/Si_Wei_Chen/publication/281271737},
+  }
+
+@book{choi1978,
+  isbn         = {9780135016190},
+  isbn10       = {0135016193},
+  title        = {Introductory applied statistics in science},
+  author       = {Sung C. Choi},
+  publisher    = {Prentice-Hall},
+  year         = {1978},
+  pages        = {278},
+  url          = {http://books.google.com/books?vid=ISBN9780135016190},
+  urla         = {http://www.amazon.com/dp/9780135016190},
   }
 
 @article{csiszar1961,
@@ -465,6 +499,16 @@
   publisher    = {Prentice Hall},
   year         = {1988},
   pages        = {543},
+  }
+
+@book{kenney1942,
+  title        = {Mathematics of Statistics, Volume 2},
+  author       = {John Francis Kenney},
+  edition      = {second edition, second printing},
+  address      = {New York},
+  year         = {1947},
+  publisher    = {D. Van Nostrand Company},
+  pages        = {260 + xii},
   }
 
 @book{kenney1947,
@@ -920,8 +964,8 @@
   }
 
 @book{stuart1991,
-  isbn10       = {0340560231},
   isbn         = {9780340560235},
+  isbn10       = {0340560231},
   title        = {Kendall's Advanced Theory of Statistics Volume 2 Classical Inference and Relationship},
   author       = {Alan Stuart and J. Keith Ord},
   publisher    = {Hodder \& Stoughton},
@@ -1001,6 +1045,16 @@
   urlg         = {http://books.google.com/books?vid=ISBN1119314208},
   }
 
+@book{tucker1962,
+  title        = {An Introduction to Probability and Mathematical Statistics},
+  series       = {Academic press textbooks in mathematics},
+  author       = {Howard G. Tucker},
+  edition      = {1},
+  publisher    = {Academic Press},
+  year         = {1965},
+  pages        = {228+xii},
+  }
+
 @book{vantrees1,
   isbn         = {0471095176},
   author       = {Harry L. Van Trees},
@@ -1064,15 +1118,25 @@
   url          = {https://www.tib.eu/en/search/id/TIBKAT%3A246489537/Proceedings-of-the-4th-International-Modal-Analysis/},
   }
 
-@article{wilks1963,
-  title        = {Mathematical statistics},
+@book{wilks1962,
+  title        = {Mathematical Statistics},
+  series       = {Wiley series in probability and mathematical statistics},
+  author       = {Samuel Stanley Wilks},
+  publisher    = {Wiley},
+  year         = {1963},
+  pages        = {644},
+  edition      = {1},
+  }
+
+@book{wilks1963,
+  title        = {Mathematical Statistics},
   series       = {Wiley series in probability and mathematical statistics},
   author       = {Samuel Stanley Wilks},
   edition      = {``Second Printing with Corrections"},
   publisher    = {Wiley},
   year         = {1963},
   pages        = {644},
-  urlg         = {https://books.google.com/books?id=-sJLAAAAMAAJ},
+  url          = {https://books.google.com/books?id=-sJLAAAAMAAJ},
   }
 
 @article{yan2012,
