--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -94,8 +94,8 @@ be the \fncte{arithmetic mean} \xref{def:am}.
 \label{def:average}
 %---------------------------------------
 \defboxt{
-  The \fnctd{average} of a length $\xN$ sequence $\seqn{\rvx_n}$ is defined as
-  \\\indentx$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$
+  The \fnctd{average} $\meanest$ of a length $\xN$ sequence $\tuplexN{\rvx_n}$ is defined as
+  \qquad$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$
   }
 \end{definition}
 
@@ -221,17 +221,28 @@ and $\mse(\text{arithmetic mean})$ be the mean square error of the \fncte{arithm
 %=======================================
 %---------------------------------------
 \begin{definition}
+\footnote{
+  \citerpc{wilks1962}{199}{\textsection ``8.2 \scshape Means and Variances of Mean, Variance,\ldots"},
+  \citerpc{wilks1963}{199}{\textsection ``(b) Mean and Variance of Sample Variance"},
+  \citerpc{kenney1942}{125}{``Bessel's correction"},
+  \citerpc{bajpai1967}{509}{???}
+  }
 \label{def:varest}
 %---------------------------------------
-\defbox{\begin{array}{rc>{\ds}l}
+\defbox{\begin{array}{rc>{\ds}l | rc>{\ds}l}
     \varest_B &\eqd& \frac{1}{\xN}  \sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2
-  \\\varest   &\eqd& \frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2
+   &\varest   &\eqd& \frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2
 \end{array}}
 \end{definition}
 
+The factor difference between the two is known as ``\vale{Bessel's correction}".
 %---------------------------------------
 \begin{theorem}
 \label{thm:varest}
+\footnote{
+  \citerpc{wilks1962}{199}{\textsection ``8.2 \scshape Means and Variances of Mean, Variance,\ldots"},
+  \citerpgc{stuart1991}{609}{9780340560235}{\textsection ``Unbiased estimators"}
+  }
 %---------------------------------------
 Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\rvx_n}$.
 \thmbox{
@@ -274,7 +285,7 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \sigma^2 + 2\pE\brs{\rvx_n\mean - \rvx_n\meanest -\mean^2 + \mean\meanest} + \frac{1}{\xN}\sigma^2 }
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \sigma^2 + 2\brs{\mean^2 - \pE(\rvx_n\meanest) -\mean^2 + \mean^2} + \frac{1}{\xN}\sigma^2 }
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \sigma^2 + 2\brs{\mean^2 - \brp{\frac{1}{\xN}\sigma^2+\mu^2} } + \frac{1}{\xN}\sigma^2 }
-            && \text{by \xref{ilem:varest}}
+            && \text{by \pref{ilem:varest}}
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \sigma^2 - \frac{1}{\xN}\sigma^2} 
           \\&= \frac{\xN-1}{\xN}\sigma^2
         \end{align*}
@@ -286,7 +297,7 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
             && \text{by definition of $\varest$}
             && \text{\xref{def:varest}}
           \\&= \frac{\xN}{\xN-1}\pE\brs{  \frac{1}{\xN}  \sum_{n=1}^{\xN-1} \brp{\rvx_n - \meanest}^2}
-          \\&= \frac{\xN}{\xN-1}\frac{\xN-1}{\xN}\sigma^2
+          \\&= \frac{\xN}{\xN-1}\brs{\frac{\xN-1}{\xN}\sigma^2}
             && \text{by \prope{biased} result}
           \\&= \sigma^2
         \end{align*}
