--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -260,7 +260,7 @@ random data vector $\vx(k)$ at time $k$, as in the \thme{Wiener-Hopf equations} 
 \begin{corollary}[\thmd{Wiener-Hopf equations}]
 \footnote{
   \citerppgc{ifeachor1993}{547}{549}{020154413X}{\textsection ``9.3 Basic Wiener filter theory"},
-  \citerppgc{ifeachor2002}{651}{654}{0201596199}{\textsection ``10.3 Basic Wiener filter theory"},   % TODO: check 654
+  \citerppgc{ifeachor2002}{651}{654}{0201596199}{\textsection ``10.3 Basic Wiener filter theory"},
   \citerpgc{kay1988}{51}{9788131733561}{\textsection ``3.3.3 Random Parameters"}
   }
 %--------------------------------------
