--- a/common/spectral_estimation.tex
+++ b/common/spectral_estimation.tex
@@ -10,13 +10,15 @@ Quality of spectral estimators\footnote{
   \citerppgc{proakis2002}{452}{457}{9780130622198}{\textsection ``8.2.4 Performance Characteristics of Nonparametric Power Spectrum Estimators"},
   \citerppgc{proakis1996}{916}{919}{9780133737622}{\textsection ``12.2.4 Performance Characteristics of Nonparametric Power Spectrum Estimators"},
   \citerpgc{rao2018}{731}{9789811080814}{``Table 12.1 Comparison of performance of classical methods"},
+  \citerpgc{salivahanan2001}{606}{9780074639962}{\textsection ``12.5 Power Spectrum Estimation: Non-Parametric Methods"},
+  \citerppgc{ifeachor2002}{706}{707}{0201596199}{\textsection ``11.3.7 Comparison of the power spectral density estimation methods"},
   \citerpg{chitode2009dsp}{P-100}{9788184316469},
-  \citerp{abdaheer2009}{204},
-  \citerpgc{salivahanan2001}{606}{9780074639962}{\textsection ``12.5 Power Spectrum Estimation: Non-Parametric Methods"}
+  \citerp{abdaheer2009}{204}
   }
 
 \thmbox{\begin{array}{|Mrcl|}
-    \ope{Welch Method 0\% overlap}:  & Q &=& 0.78\xN\Delta f
+    \ope{Periodogram}:               & Q &=& 1
+  \\\ope{Welch Method 0\% overlap}:  & Q &=& 0.78\xN\Delta f
   \\\ope{Welch Method 50\% overlap}: & Q &=& 1.39\xN\Delta f
   \\\ope{Bartlett Method}:           & Q &=& 1.11\xN\Delta f
   \\\ope{Blackman-Tukey Method}:     & Q &=& 2.34\xN\Delta f
