--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1857,6 +1857,7 @@
  \newcommand{\estMS}  [1][\theta] {\est[#1]{mms}} % minimum mean square
  \newcommand{\estLS}  [1][\theta] {\est[#1]{ls}} % least square
  \newcommand{\estT}    {\hat{\theta}}     % estimated parameter
+ \newcommand{\estPhi}  {\hat{\phi}}     % estimated parameter
  \newcommand{\estH}    {\hat{\fH}}     % estimated transfer function
  \newcommand{\estHs}   {\estH_{\mathsfup{s}}}  % scaled transfer function estimator
  \newcommand{\estHkp}  {\estH_{\mathsfup{\kappa}}}  % White's transfer function estimator
