--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -241,6 +241,7 @@ The factor difference between the two is known as ``\vale{Bessel's correction}".
 \label{thm:varest}
 \footnote{
   \citerpc{wilks1962}{199}{\textsection ``8.2 \scshape Means and Variances of Mean, Variance,\ldots"},
+  \citerpgc{tucker1962}{111}{}{\textsection ``8.2 Unbiased and Consistent Estimates"},
   \citerpgc{stuart1991}{609}{9780340560235}{\textsection ``Unbiased estimators"}
   }
 %---------------------------------------
