partial var(varest) proof with reference to Wilks 1962

--- a/common/algebra.tex
+++ b/common/algebra.tex
@@ -2,7 +2,6 @@
 % Daniel J. Greenhoe
 % LaTeX file
 %============================================================================
-
 %======================================
 \chapter{Algebraic structures}
 \label{app:algebra}
@@ -43,7 +42,7 @@ mathematical structures:
 %---------------------------------------
 Let $\setX$ be a set and $\Diamond:\setX\times \setX\to \setX$ be an operation on $\setX$. \\
 \defboxt{
-  The pair $\opair{\setX}{\Diamond}$ is a \hid{group} if
+  The pair $\opair{\setX}{\Diamond}$ is a \structd{group} if
   \\\indentx$\begin{array}{Fll @{\qquad}C @{\qquad}DD}
     1. & \exists e \in \setX \st
        & e \Diamond x = x\Diamond e    = x
@@ -65,7 +64,6 @@ Let $\setX$ be a set and $\Diamond:\setX\times \setX\to \setX$ be an operation o
   }
 \end{definition}
 
-
 %---------------------------------------
 \begin{definition}
 \citetbl{
@@ -78,7 +76,7 @@ be operations on a set $\setX$.
 Furthermore, let the operation $*$ also be represented by
 juxtapostion as in $a*b\equiv ab$.\\
 \defboxt{
-  The triple $\otriple{\setX}{+}{*}$ is a \hid{ring} if
+  The triple $\otriple{\setX}{+}{*}$ is a \structd{ring} if
   \\\indentx
   $\begin{array}{F lcl @{\qquad}C @{\qquad}D @{\qquad}D}
      1. & \mc{3}{l}{\text{$\opair{\setX}{+}$ is a group.}}
@@ -88,20 +86,19 @@ juxtapostion as in $a*b\equiv ab$.\\
         \\
      2. & x(yz)  &=& (xy)z
         & \forall x,y,z\in\setX
-        & (\prop{associative} with respect to $*$)
+        & (\prope{associative} with respect to $*$)
         & and
         \\
      3. & x(y+z) &=& (xy)+(xz)
         & \forall x,y,z\in\setX
-        & ($*$ is \prop{left distributive} over $+$)
+        & ($*$ is \prope{left distributive} over $+$)
         & and
         \\
      4. & (x+y)z &=& (xz)+(yz)
         & \forall x,y,z\in\setX
-        & ($*$ is \prop{right distributive} over $+$).
+        & ($*$ is \prope{right distributive} over $+$).
   \end{array}$}
 \end{definition}
-
 
 %---------------------------------------
 \begin{definition}
@@ -112,11 +109,11 @@ juxtapostion as in $a*b\equiv ab$.\\
 \index{ring!commutative}
 %---------------------------------------
 \defboxt{
-  A triple $\otriple{\setX}{+}{*}$ is a \hid{commutative ring} if
+  A triple $\otriple{\setX}{+}{*}$ is a \structd{commutative ring} if
   \\\indentx
-  $\begin{array}{F M @{\qquad}C@{\qquad}D@{\qquad}D}
-    1. & $\otriple{\setX}{+}{*}$ is a ring  &                     & (ring) & and \\
-    2. & $xy=yx$                            & \forall x,y\in\setX & (commutative).
+  $\begin{array}{FMCD}
+      1. & $\otriple{\setX}{+}{*}$ is a \structe{ring}  &                     &  and
+    \\2. & $xy=yx$                                      & \forall x,y\in\setX & (\prope{commutative}).
   \end{array}$}
 \end{definition}
 
@@ -131,7 +128,7 @@ juxtapostion as in $a*b\equiv ab$.\\
 %--------------------------------------
 Let $R$ be a \structe{commutative ring} \xref{def:com_ring}.
 \defboxt{
-  A function $\absn$ in $\clFrr$ is an \hid{absolute value} (or \hid{modulus}) if
+  A function $\absn$ in $\clFrr$ is an \fnctd{absolute value} (or \fnctd{modulus}) if
   \\\indentx
   $\begin{array}{F rcl @{\qquad}C@{\qquad}D@{\qquad}D}
     1. & \abs{ x}  &\ge& 0                     & x  \in\R & (\prope{non-negative})                              & and
@@ -140,9 +137,6 @@ Let $R$ be a \structe{commutative ring} \xref{def:com_ring}.
   \\4. & \abs{x+y} &\le& \abs{x}+\abs{y}       & x,y\in\R & (\prope{subadditive} / \prope{triangle inequality}) &
   \end{array}$}
 \end{definition}
-
-
-
 
 %---------------------------------------
 \begin{definition}
@@ -170,8 +164,6 @@ Let $R$ be a \structe{commutative ring} \xref{def:com_ring}.
       & (group with respect to $*$).
 \end{array}$}
 \end{definition}
-
-
 
 %---------------------------------------
 \begin{definition}
@@ -207,5 +199,3 @@ An \structd{algebra} is any pair $\opair{\spV}{\otimes}$ that satisfies
      & .
 \end{array}}
 \end{definition}
-
-
