--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -83,7 +83,7 @@
       %--------------------------------
       &\tboxc{%
          \tboxc{\imarkL}\hspace{3pt}%
-         \tboxc{#1 \fntDigital[version\hspace{1ex}\version]}%
+         \tboxc{#1 \fntDigital[version \version]}%
          \hspace{3pt}\tboxc{\imarkL}%
          \\\url{#2}}%
       %--------------------------------
@@ -108,7 +108,7 @@
       %--------------------------------
       &\tboxc{%
          \tboxc{\imarkL}\hspace{3pt}%
-         \tboxc{#1 \fntDigital[version\hspace{1ex}\version]}%
+         \tboxc{#1 \fntDigital[version \version]}%
          \hspace{3pt}\tboxc{\imarkL}%
          \\\url{#2}}%
       %--------------------------------
