--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -278,6 +278,7 @@ it \prope{unbiased}.
 \label{thm:varest}
 %---------------------------------------
 Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\rvx_n}$.
+Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} of $\rvx_n$.
 \thmbox{
   \brb{\begin{array}{FMD}
       (A).& $\seqn{\rvx_n}$ is \prope{WSS}          & and
@@ -288,7 +289,7 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
   \brb{\begin{array}{FrclDD}
       (1).& \pE\varest_B\seqn{\rvx_n}  &=& \ds\frac{\xN-1}{\xN}\pvar            & (\prope{biased})   & and
     \\(2).& \pE\varest  \seqn{\rvx_n}  &=& \ds                 \pvar            & (\prope{unbiased}) & and
-    \\(3).& \var\brs{\varest\seqn{\rvx_n}} &=& \mc{3}{l}{\ds\frac{1}{\xN}\brs{\mu^4 - \sigma^4\brp{\frac{\xN-3}{\xN-1}}}}
+    \\(3).& \var\brs{\varest\seqn{\rvx_n}} &=& \mc{2}{l}{\ds\frac{1}{\xN}\brs{\mu^4 - \brp{\frac{\xN-3}{\xN-1}}\sigma^4}} & (\prope{consistent})
   \end{array}}
   }
 \end{theorem}
@@ -325,7 +326,7 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
                }
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar + 2\pE\brs{\rvx_n\mean - \rvx_n\meanest -\mean^2 + \mean\meanest} + \frac{1}{\xN}\pvar }
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar + 2\brs{\mean^2 - \pE(\rvx_n\meanest) -\mean^2 + \mean^2} + \frac{1}{\xN}\pvar }
-            && \text{by \prefp{cor:mse_average}}
+            && \mathrlap{\text{by \prefp{cor:mse_average}}}
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar + 2\brs{\mean^2 - \brp{\mean^2 + \frac{1}{\xN}\pvar}} + \frac{1}{\xN}\pvar }
             && \text{by \prope{unbiased} property of $\meanest$}
             && \text{\xref{ilem:varest_xmu}}
@@ -355,6 +356,57 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
         The assertion is made by \citerp{wilks1962}{199} who also without there supplying a proof 
         says, 
         ``Carrying out similar mean value operations we find after some reduction that" the result follows. 
+    {\begin{align*}
+      \pE\brs{\brp{\varest}^2}
+        &\eqd \pE\brs{\brp{\frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2}^2}
+        \qquad \text{by definition of $\varest$ \xref{def:varest}}
+      \\&= \pE\brs{
+           \brp{\frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2}
+           \brp{\frac{1}{\xN-1}\sum_{m=1}^{\xN} \brp{\rvx_m - \meanest}^2}
+           }
+      \\&= \brp{\frac{1}{\xN-1}}^2\pE\brs{
+           \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
+           \brp{\rvx_n - \meanest}^2 
+           \brp{\rvx_m - \meanest}^2
+           }
+      \\&= \brp{\frac{1}{\xN-1}}^2\pE\brs{
+           \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
+           \brp{\rvx_n^2 -2\rvx_n\meanest + \meanest^2}
+           \brp{\rvx_m^2 -2\rvx_m\meanest + \meanest^2}
+           }
+      \\&= \brp{\frac{1}{\xN-1}}^2\pE\brs{
+           \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
+           \brs{\begin{array}{cl}
+               & \brp{\rvx_n^2\rvx_m^2 -2\meanest\rvx_n^2\rvx_m + \meanest^2\rvx_n^2}
+              +  \brp{-2\meanest\rvx_n\rvx_m^2 +4\meanest^2\rvx_n\rvx_m -2\rvx_n\meanest^3}
+            \\+&\brp{\meanest^2\rvx_m^2 -2\meanest^3\rvx_m + \meanest^4}
+           \end{array}}
+           }
+      \\&= \brp{\frac{1}{\xN-1}}^2
+           \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
+           \brs{\begin{array}{cl}
+                   &\pE\brs{          \rvx_n^2\rvx_m^2 }
+                 -2 \pE\brs{\meanest  \rvx_n^2\rvx_m   }
+                 -2 \pE\brs{\meanest  \rvx_n  \rvx_m^2 }
+                 +  \pE\brs{\meanest^2\rvx_n^2         }
+                 +  \pE\brs{\meanest^2\rvx_m^2         }
+               \\+4&\pE\brs{\meanest^2\rvx_n\rvx_m     }
+                 -2 \pE\brs{\meanest^3\rvx_n           }
+                 -2 \pE\brs{\meanest^3\rvx_m           }
+                 +  \pE\brs{\meanest^4                 }
+           \end{array}}
+      \\&= \brp{\frac{1}{\xN-1}}^2
+           \sum_{n=1}^{\xN} \sum_{m=1}^{\xN} 
+           \brs{\begin{array}{cl}
+                   &\pE\brs{          \rvx_n^2\rvx_m^2 }
+                 -4 \pE\brs{\meanest  \rvx_n^2\rvx_m   }
+                 +2 \pE\brs{\meanest^2\rvx_n^2         }
+               \\+4&\pE\brs{\meanest^2\rvx_n\rvx_m     }
+                 -4 \pE\brs{\meanest^3\rvx_n           }
+                 +  \pE\brs{\meanest^4                 }
+           \end{array}}
+      \\&\eqq \frac{\mu^4}{\xN} + \frac{(\xN-1)^2+2}{\xN(\xN-1)} \sigma^4
+    \end{align*}}
 
   \item Proof for (3):
     {\begin{align*}
@@ -374,10 +426,59 @@ Let $\meanest$ be the \fncte{average} \xref{def:average} of a sequence $\seqn{\r
       \\&= \pE\brs{\brp{\varest}^2} - 2\brp{\pvar}^2 + \brp{\pvar}^2
         && \text{by (2)}
         && \text{\xref{item:varest}}
-      \\&= \brs{\frac{\mu^4}{\xN} + \frac{(\xN-1)^2+2}{\xN(\xN-1)} \sigma^4} - \sigma^4 
+      \\&= \brs{\frac{\mu^4}{\xN} + \brp{\frac{(\xN-1)^2+2}{\xN(\xN-1)}} \sigma^4} - \sigma^4 
         && \text{by \pref{ilem:varest_varvar}}
-      \\&= \frac{1}{\xN}\brs{\mu^4 - \sigma^4\brp{\frac{\xN-3}{\xN-1}}}
+      \\&= \mathrlap{\frac{1}{\xN}\brs{\mu^4 + \brp{\frac{(\xN^2-\xN+1)+2-\xN(\xN-1)}{\xN-1}} \sigma^4}}
+      \\&= \frac{1}{\xN}\brs{\mu^4 - \brp{\frac{\xN-3}{\xN-1}}\sigma^4}
     \end{align*}}
 \end{enumerate}
+\end{proof}
+
+%=======================================
+\section{Estimates in terms of moment estimates}
+%=======================================
+%---------------------------------------
+\begin{definition}
+\label{def:momest}
+%---------------------------------------
+\defboxt{
+  The \fnctd{order-k moment estimate} is here defined as
+  \\\indentx$\ds
+  \momest_k\seqn{\rvx_n} \eqd \frac{1}{\xN}\sum_{n=1}^{\xN} \rvx_n^k
+  $
+  }
+\end{definition}
+
+%---------------------------------------
+\begin{proposition}
+%---------------------------------------
+\propbox{\begin{array}{rc>{\ds}l}
+    \meanest\seqn{\rvx_n} &=& \momest_1
+  \\\varest\seqn{\rvx_n}  &=& \frac{\xN}{\xN-1}\momest_2 - \frac{\xN}{\xN-1}\momest_1^2
+\end{array}}
+\end{proposition}
+\begin{proof}
+{\begin{align*}
+  \meanest\seqn{\rvx_n} 
+    &\eqd \frac{1}{\xN}\sum_{n=1}^{\xN} \rvx_n
+    && \text{by definition of $\meanest$}
+    && \text{\xref{def:average}}
+  \\&\eqd \momest_1
+    && \text{by definition of $\momest_1$}
+    && \text{\xref{def:momest}}
+    \\
+  \\\varest\seqn{\rvx_n}  
+    &\eqd \frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n-\meanest}^2
+    && \text{by definition of $\varest$}
+    && \text{\xref{def:varest}}
+  \\&= \frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\rvx_n^2 - 2\rvx_n\meanest +\brp{\meanest}^2}
+  \\&=   \frac{1}{\xN-1}\sum_{n=1}^{\xN} \rvx_n^2 
+      - 2\frac{1}{\xN-1}\sum_{n=1}^{\xN} \rvx_n\meanest 
+      +  \frac{1}{\xN-1}\sum_{n=1}^{\xN} \brp{\meanest}^2
+  \\&=   \frac{\xN}{\xN-1}\mcom{\frac{1}{\xN}\sum_{n=1}^{\xN} \rvx_n^2}{$\momest_2$}
+      - 2\mcom{\meanest}{$\momest_1$}\frac{\xN}{\xN-1}\mcom{\frac{1}{\xN}\sum_{n=1}^{\xN} \rvx_n}{$\momest_1$}
+      +  \frac{\xN}{\xN-1} \mcom{\brp{\meanest}^2}{$\momest_1^2$}
+  \\&= \frac{\xN}{\xN-1}\momest_2 - \frac{\xN}{\xN-1}\momest_1^2
+\end{align*}}
 \end{proof}
 
